PDFBOX-3017: replace method that is deprecated in later jdk versions
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/2.0@1854932 13f79535-47bb-0310-9956-ffa450edef68